# db

./: .gitignore  CLAUDE.md  PLAN.md  README.md
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 001_users.sql  002_projects.sql  003_pgbouncer.sql  004_environments.sql  005_branches.sql  006_branch_unique_name.sql  007_organizations.sql  008_metrics.sql  009_alerts.sql  010_backups.sql
backend/src/: config.rs  error.rs  main.rs  state.rs  util.rs
backend/src/api/: auth.rs  backups.rs  branches.rs  health.rs  metrics.rs  mod.rs  organizations.rs  projects.rs  query.rs
backend/src/auth/: jwt.rs  password.rs
backend/src/db/: access.rs  mod.rs  models.rs
backend/src/metrics/: mod.rs
backend/src/orchestrator/: backup.rs  docker.rs  mod.rs
backend/src/scheduler/: mod.rs
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docker/pgbouncer/: Dockerfile
docker/postgres/: Dockerfile
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/organizations/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: app-shell.tsx  project-page-header.tsx  providers.tsx
frontend/src/components/backups/: backups-card.tsx
frontend/src/hooks/: use-auth.ts  use-project-mutations.ts  use-projects.ts
frontend/src/lib/: api.ts
scripts/: setup.ps1  setup.sh
tools/setup/: Cargo.toml
tools/setup/src/: main.rs
(+15 files in other folders)
